syntax = "proto3";

package Neuro.Utilities;

message MyVector2 {
    float X = 1;
    float Y = 2;
}
